cmake_minimum_required (VERSION 2.6)
project (DelphesAnalysis)

add_executable(JetTestAna JetTestAna.cpp)
add_executable(PrintParm  PrintParm.cpp)
add_executable(JetCharge  JetCharge.cpp)
add_executable(CMSKinSolver  CMSKinSolver.cpp)
add_executable(measureTop  measureTop.cpp)
add_executable(checkTopMass  checkTopMass.cpp)
add_executable(topmassJpsi  topmassJpsi.cpp)
add_executable(topmassJpsi2  topmassJpsi2.cpp)
add_executable(topmassJpsi3  topmassJpsi3.cpp)
target_link_libraries(JetTestAna Delphes ${ROOT_LIBRARIES})
target_link_libraries(PrintParm Delphes ${ROOT_LIBRARIES} DecayChannel)
target_link_libraries(JetCharge Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(CMSKinSolver Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(measureTop Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(checkTopMass Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(topmassJpsi Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(topmassJpsi2 Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
target_link_libraries(topmassJpsi3 Delphes ${ROOT_LIBRARIES} CMSKin DecayChannel)
#target_link_libraries(decayChannel Delphes ${ROOT_LIBRARIES})
